# rullm

./: .gitignore  flake.nix  mcp-mealie-server.nix  rullm.nix
mcp-mealie-server/: Cargo.toml
mcp-mealie-server/proptest-regressions/: mcp.txt
mcp-mealie-server/src/: conf.rs  env.rs  lib.rs  main.rs  mcp.rs  mealie.rs
rullm/: Cargo.toml  tailwind.config.js
rullm/assets/css/: style.css
rullm/src/: args.rs  chat.rs  conf.rs  env.rs  htmx.rs  lib.rs  main.rs  mcp.rs  openai.rs
