[package]
name = "mcp-mealie-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["stream", "json"] }
rmcp = { version = "0.1.5", features = ["transport-child-process", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
